--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -9,7 +9,7 @@
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
 
-            <div class="wikipedia">
+            <div class="wikipedia" style="display: none">
                 [(${article})]
             </div>
             <script>
